package com.creational.abstractfactory.exercise2;

public interface Iandroid {
    String getModelDetails();
}
