package com.creational.abstractfactory.exercise2;

public interface Iios {
    String getModelDetails();
}

