package com.creational.abstractfactory.exercise2;

public interface Imobile {
    Iandroid GetAndroidPhone();

    Iios GetIosPhone();
}
