package com.creational.abstractfactory.exercise2;

public class Iphone implements Iios {
    @Override
    public String getModelDetails() {
        return "Model : Iphone ";
    }
}
