package com.creational.abstractfactory.exercise2;

public class SamsungGalaxy implements Iandroid {

    @Override
    public String getModelDetails() {
        return "Model : Samsung Galaxy Model";
    }
}
